--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  box-sizing: border-box;
   background-color: #213547;
   background-image: url('./img/space.jpeg');
   background-size: cover;
