--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,71 @@ body {
   margin: auto;
 }
 
+.link {
+  color: aliceblue;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: wheat;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  margin-bottom: 50px;
+  color: wheat;
+}
+
+.range-wrapper {
+  box-sizing: border-box;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
+
+  font-weight: 700;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px lightsteelblue solid;
+  border-radius: 20px;
+}
+
+.label {
+  flex-grow: 1;
+}
+
+.main-wrapper {
+  margin-top: 50px;
+}
+
+.page-prev {
+  transform: rotate(180deg);
+}
+
+.page-number {
+  height: 100%;
+  padding: 0 30px;
+  font-size: 20px;
+  color: wheat;
+  background-color: rgb(0, 0, 0);
+}
+
+.page-contaner {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+
   button {
     background-color: #f9f9f9;
   }
