--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,15 @@ body {
   justify-content: center;
 }
 
+.wrapper-outlet {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-card {
+  width: 100%;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
