--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -23,7 +23,7 @@
   height: 100px;
   padding: 10px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 
   color: aliceblue;
@@ -50,6 +50,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  flex-wrap: wrap;
 
   gap: 50px;
   background-color: rgba(0, 0, 0, 0.7);
@@ -65,4 +66,24 @@
 
 .btn-close:hover {
   color: #0e294b;
+}
+
+.abilities {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  align-items: center;
+}
+
+.abilities-list {
+  padding: 0;
+  margin: 0;
+}
+
+.item {
+  list-style: none;
+}
+
+h4 {
+  color: chartreuse;
 }
