--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -12,6 +12,8 @@
 
 .card-container {
   max-width: 50%;
+  min-height: 400px;
+  align-items: center;
 }
 
 .card-container-inside {
@@ -44,15 +46,19 @@
 
 .main-card {
   width: 100%;
-  height: auto;
+  min-height: 300px;
   padding: 50px;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 50px;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.main-card > img {
+  max-height: 100%;
 }
 
 .btn-close {
