feat: add testing libs and test for cards

--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -37,11 +37,14 @@
   overflow: hidden;
 }
 
+.card:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .link :hover {
   color: chartreuse;
   cursor: pointer;
   border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .main-card {
