--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -7,7 +7,7 @@
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .card-container {
