--- a/src/app/list/main-page.css
+++ b/src/app/list/main-page.css
@@ -1,5 +1,19 @@
+.body {
+  box-sizing: border-box;
+  padding: 20px;
+
+  background-color: #213547;
+  background-image: url('/img/space.jpeg');
+  background-size: cover;
+}
+
 .main-content {
   margin: 100px 50px;
+}
+
+.main-wrapper {
+  width: 100vw;
+  height: 100vh;
 }
 
 .card-container,
