--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   padding: 20px;
-  height: 100vh;
 
   font-size: 24px;
   font-weight: bold;
@@ -105,4 +104,19 @@
   color: chartreuse;
   background-color: rgba(0, 0, 0, 0.7);
   cursor: pointer;
+}
+
+.card-container,
+.card-container-inside {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card-container {
+  margin-top: 50px;
+  max-width: 50%;
+  min-height: 400px;
+  align-items: center;
 }
