--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,28 @@ body {
   justify-content: space-between;
 }
 
+.link-container {
+  display: flex;
+}
+
+.link-to-form {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: 50px;
+  min-width: 250px;
+  font-size: 16px;
+  font-weight: bold;
+
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+}
+
+.link-to-form:hover {
+  color: chartreuse;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
