--- a/forms/src/index.css
+++ b/forms/src/index.css
@@ -2,56 +2,68 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
-  margin: 0;
+  box-sizing: border-box;
+  background-color: #213547;
+  background-image: url('./img/space.jpeg');
+  background-size: cover;
+}
+
+#root {
+  max-width: 95vw;
+  margin: auto;
+}
+
+.link,
+.link:visited {
+  height: auto;
+  color: aliceblue;
+  text-decoration: none;
+}
+
+.main-header {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-self: center;
+  margin-bottom: 50px;
+  color: wheat;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.main-wrapper {
+  margin-top: 50px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.page-prev {
+  transform: rotate(180deg);
 }
-button:hover {
-  border-color: #646cff;
+
+.wrapper-outlet {
+  display: flex;
+  justify-content: space-between;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.link-container {
+  display: flex;
+}
+
+.link-to-form {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: 50px;
+  min-width: 250px;
+  font-size: 16px;
+  font-weight: bold;
+
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+}
+
+.link-to-form:hover {
+  color: chartreuse;
 }
 
 @media (prefers-color-scheme: light) {
@@ -59,9 +71,7 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+
   button {
     background-color: #f9f9f9;
   }
