--- a/forms/src/index.css
+++ b/forms/src/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 .main-wrapper {
-  margin-top: 50px;
+  margin: 50px;
 }
 
 .page-prev {
@@ -121,21 +121,32 @@ body {
   display: none;
 }
 
-.form{
+.form {
   position: relative;
 }
 
-.form ul{
+.form ul {
   position: absolute;
   bottom: 70px;
   left: 70px;
-
 }
 
-
-
-.country{
+.country {
   list-style: none;
+}
+
+.form-data {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.field {
+  margin: 20px;
 }
 
 @media (prefers-color-scheme: light) {
